--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+src/main/resources/.env
+src/main/resources/log4j2.yml
+logs/app.log
 
 ### STS ###
 .apt_generated
@@ -31,5 +34,4 @@ build/
 
 ### VS Code ###
 .vscode/
-.env
-/logs
+*.log
